package Mealplan;

import java.util.HashMap;

public class Ingredient {

    private String name;
    private String category;
    private HashMap<String, Float> nutritionContent;


}
