package User;

public class Main {

    public static void main(String[] args) {
        AccountHandler ah = new AccountHandler();
        ah.loginOrCreateUser();
        //ah.createAccount();
    }


}
