@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

class Main
class Application

package "user"{
class Account
class AccountHandler
class User
}

package "mealplan"{
class MealPlanHandler
class MealPlan
class DailyMealPlan
class Recipe
class IngredientList
class Ingredient
}

package "filters"{
class Diet
class Recommendation
class FoodHandler
}

package "util"{
abstract class DBConnector
class UI
class DBUser
class DBRecipe
class DBIngredients
}

'Label on relations

Main *-- Application

Application *-- AccountHandler
Application *-- UI
Application *-- MealPlanHandler
Application *-- DBRecipe

AccountHandler *-- Account

Account *-- User
Account *-- MealPlan

MealPlan "1" *-- "has 1..many" DailyMealPlan

MealPlanHandler *-- AccountHandler
MealPlanHandler *-- DBRecipe
MealPlanHandler *-- MealPlan
MealPlanHandler *-- UI

DailyMealPlan "1" *-- "has 1..3" Recipe

Recipe *-- IngredientList

IngredientList *-- Ingredient

DBConnector <|-- DBUser
DBConnector <|-- DBRecipe
DBConnector <|-- DBIngredients

'Methods and attributes

Main : + static void main(String[] args);


'Attributes
Application : - UI ui = new UI();
Application : - MealPlanHandler mealPlanHandler = new MealPlanHandler();
Application : - DBRecipe dbRecipe = new DBRecipe();
Application : - Scanner scanner = new Scanner(System.in);

'Constructor
Application : + Application()

'Methods
Application : + void startMenu()
Application : + void menu()

'Attributes
Account : - String email;
Account : - String password;
Account : - List<User> users;
Account : - MealPlan myMealPlan;

'Methods
Account : + Account(String email, String password)
Account : + String getEmail();
Account : + String getPassword();
Account : + User createUser(String name, int age)
Account : + void deleteUser(String name)
Account : + getMyMealPlan():
Account : + String toString();

'Attributes
AccountHandler : - Set<Account> accounts;
AccountHandler : - String email;
AccountHandler : - String password;
AccountHandler : - Account onlineAccount;
AccountHandler : - UI ui = new UI();
AccountHandler : - DBUser dbUser = new DBUser();

'Methods
AccountHandler : + AccountHandler();
AccountHandler : + void mainMenu();
AccountHandler : + void loginForm();
AccountHandler : + void login();
AccountHandler : + void createAccount();
AccountHandler : + Account getOnlineAccount();


'Attributes
User : - String name;
User : - int age;

'Methods
User : + User(String name, int age);
User : + String getName();
User : + int getAge();

'Attributes
MealPlanHandler : + AccountHandler acountHandler;
MealPlanHandler : - MealPlan myMealPlan;
MealPlanHandler : - DBRecipe dbRecipe;
MealPlanHandler : - UI ui;

'Methods
MealPlanHandler : + void createMealPlan();
MealPlanHandler : - Recipe createRecipe();
MealPlanHandler : - LocalDate getStartDate();
MealPlanHandler : - void saveRecipeAndAddToMealPlan(Recipe recipe, LocalDate selectedDate);
MealPlanHandler : - boolean shouldCreateForNextDay();
MealPlanHandler : - LocalDate getNextDay(LocalDate currentDate, int counter)
MealPlanHandler : + void chooseRecipeFromDB(String day, String date);
MealPlanHandler : + void showMealPlan();

'Attributes
MealPlan : - List<DailyMealPlan> myMealPlan = new ArrayList<>()

'Methods
MealPlan : + void addDailyMealPlan(String date, String day, Recipe meal)
MealPlan : + List<DailyMealPlan> getMyMealPlan()

'Attributes
DailyMealPlan : - String date;
DailyMealPlan : - String day;
DailyMealPlan : - Recipe dinner;

'Methods
DailyMealPlan : + DailyMealPlan(String date, String day, Recipe meal);
DailyMealPlan : + String getDate();
DailyMealPlan : + String getDay();
DailyMealPlan : + Recipe getDinner();
DailyMealPlan : + String toString();

'Attributes
Recipe : - int id;
Recipe : - String title;
Recipe : - String description;
Recipe : - int prepTime;
Recipe : - int cookTime;
Recipe : - String ingredients;
Recipe : - List<String> listOfIngredients;
Recipe : - List<String> listOfSteps;

'Methods
Recipe : + Recipe(int id, String title, String description, int cookTime, List<String> ingredients, List<String> steps);
Recipe : + Recipe(String title);
Recipe : + int getId();
Recipe : + String getTitle();
Recipe : + String getDescription();
Recipe : + int getPrepTime();
Recipe : + int getCookTime();
Recipe : + String toString();
Recipe : + boolean equals(Object o);
Recipe : + hashCode();
Recipe : + List<String> getMethod();

'Attributes
IngredientList : - HashMap<Ingredient, float> ingredientAmount;

'Methods
IngredientList : + void addIngredient(Ingredient ingredient)
IngredientList : + void addAmount(float amount)

'Attributes
Ingredient : - String name
Ingredient : - String category
Ingredient : - HashMap<String, float> nutritionContent;

GroceryList : HashSet<Ingredient> myGroceryList

'Attributes
UI : - Scanner scanner = new Scanner(System.in);

'Methods
UI : + void displayMessage(String msg);
UI : + String getInput(String msg);
UI : + int displayMenu(List<String> menuItems);

'Attributes
DBConnector : - static final String DB_URL = "jdbc:mysql://34.141.56.218/mealplanner";
DBConnector : - static final String USER = "root";
DBConnector : - static final String PASS = "LAHY-Dat23!";
DBConnector : + PreparedStatement stmt = null;

'Methods
DBConnector : + Connection getConnection();

'Methods
DBUser : + void saveUser(String email, String password)
DBUser : + Set<Account> readUserData()

'Attributes
DBRecipe : - Connection conn = null;
DBRecipe : - PreparedStatement stmt = null;

'Methods
DBRecipe : + void saveRecipe(Recipe recipe)
DBRecipe : + Set<Recipe> readRecipes()

'Attributes
DBIngredients : - Connection conn = null;
DBIngredients : - PreparedStatement stmt = null;

'Methods
DBIngredients : + Set<Ingredient> readIngredients()


Diet : + Set<Recipe> filterByDietType(String dietType);
Diet : + Set<Recipe> filterByAllergies(String allergiesOf);
Diet : + Set<Recipe> filterByDietAllergy

Recommendation : + Set<Recipe> getRandomRecipe();
Recommendation : + Set<Recipe> getRandomRecipe(String dontLike);

FoodHandler : - List<Ingredient> ownRecipe;
FoodHandler : + addIngredientsToList();
FoodHandler : + removeIngredientFromList();
@enduml